syntax = "proto3";

package file;

service FileService {
    rpc Create(CreateFileDto) returns (ResponseData){}
    rpc FindAll(Empty) returns (ResponseDataFindAll) {}
    rpc FindOne(Id) returns (ResponseData) {}
    rpc Update(UpdateFileDto) returns (ResponseData) {}
    rpc Remove(Id) returns (ResponseData) {}
}


// Entity
message File {
    int32 id = 1;
    string url = 2;
    string mimetype = 3;
    int32 size = 4;
    string createdAt = 5;
    string lastUpdatedAt = 6;
}

// All agruments
message Empty {}
message Id {
    int32 id = 1;
}


// ParkService arguments
message CreateFileDto {
    int32 userId = 1;
    int32 amount = 2;
}

message UpdateFileDto {
    int32 id = 1;
    int32 userId = 2;
    int32 amount = 3;
}

// Return
message ResponseData {
    string message = 1;
    int32 statusCode = 2;
    File data = 3;
}

message ResponseDataFindAll {
    string message = 1;
    int32 statusCode = 2;
    repeated File data = 3;
}